homework_3/Project/gateway/virtual-service.yml
# Public access via a gateway for all hosts
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio
spec:
  hosts:
    - "*"
  gateways:
    - course-frontend-gateway
  http:
    - match:
        - headers:
            x-developer:
              exact: illia-korotia
          uri:
            prefix: /frontend-catalog/api/v1/
      rewrite:
        uri: /api/v1/
      route:
        - destination:
            host: frontend
            subset: v2
    - match:
      - uri:
          prefix: /frontend-catalog/api/v1/
      rewrite:
        uri: /api/v1/
      route:
        - destination:
            host: frontend
            subset: v1
---
# Internal access to authors
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio-authors-internal
spec:
  hosts:
    - authors
  http:
    - route:
      - destination:
          host: authors
          subset: v1
        weight: 10
      - destination:
          host: authors
          subset: v2
        weight: 90
---
# Internal access to books
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: course-istio-books-internal
spec:
  hosts:
    - books
  http:
    - route:
        - destination:
            host: books
            subset: v1
          weight: 10
        - destination:
            host: books
            subset: v2
          weight: 90
---
